fix: shorter subtitle on mobile

--- a/styles.css
+++ b/styles.css
@@ -277,8 +277,12 @@ footer a:hover {
     color: var(--white);
 }
 
+.mobile-only { display: none; }
+
 /* Mobile */
 @media (max-width: 540px) {
+    .desktop-only { display: none; }
+    .mobile-only { display: inline; }
     html { font-size: 14px; }
     h1 { font-size: 26px; }
     main { padding: 40px 0 80px; }
